--- a/authentication-lab/templates/add_tweet.html
+++ b/authentication-lab/templates/add_tweet.html
@@ -2,9 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>ATEF FAHOUM</title>
 </head>
 <body>
+     <form method="post" action="/add_tweet">
+       <div>
+            <label>title</label>
+            <div>
+                <input type="text"  name="title" id="title12" required>
+            </div>
+        </div>
+        
+          <div>
+            <label>text</label> 
+            <div>
+                <input type="text"  name="text" id="title12" required>
+            </div>
+           <input type="submit" name="button">
+        </div>
+
+
+    </form>
     Great Job!
 </body>
 </html>
