--- a/authentication-lab/templates/signup.html
+++ b/authentication-lab/templates/signup.html
@@ -5,6 +5,7 @@
     <title>Signup</title>
 </head>
 <body>
+
     <form method="post" action="/signup">
         <!-- Heading -->
         <h4>
@@ -22,6 +23,31 @@
             <div>
                 <input type="email"  name="email" id="emailStr" required>
             </div>
+        </div>
+        <div>
+            <label>full_name</label>
+            <div>
+                <input type="text"  name="full_name" id="id1" required>
+            </div>
+        </div>
+        <div>
+            <label>username</label>
+            <div>
+                <input type="text"  name="username" id="id2" required>
+            </div>
+
+        </div>
+          <div>
+            <label>bio</label>
+            <div>
+
+                <input type="text"  name="bio" id="id2" <label for="name" maxlength="280" required>
+
+<label for="description">Product description:</label>
+<textarea name="description" minlength="10" maxlength="40" required></textarea>
+ required>
+            </div>
+
         </div>
 
         <!-- Password -->
